# computer-graphics-4

./: .gitignore  CMakeLists.txt  L-system.c  L-system.h  LIGHTING_README.md  Polyhedron.c  Polyhedron.h  README.md  basic.c  camera.c  camera.h  clay_renderer_raylib.c  common.c  common.h  cornell_box.c  cornell_box.h  glfw_boilerplate.c  lab11.c  lab2.h  linalg.c  linalg.h  main.c  matrix-transforms.c  matrix-transforms.h  module3.h  obj_loader.c  obj_loader.h  polygon.c  polygon.h  scene.c  scene.h  solar_system.c  stack.h  task1.c  task2.c  task3.c  utils.c  utils.h  vector.h  конспект.txt
fractals/: dragon.txt  dragon2.txt  gilbert_curve.txt  island.txt  koch.txt  sierpinski_carpet.txt  snowflake.txt  tree.txt  tree1.txt  tree2.txt  tree3.txt
lab_2/: task2.c  task3.c
lab_3/: task1.c
lab_4/: utils.c
lab_5/: task2.c  task3.c
models/indiv_3/: cloud rain.blend
module1/lab_3/: main.c  task2.c
module1/lab_4/: polygon.c
module1/lab_5/: task1.c
module2/: CMakeLists.txt  L-system.h  Makefile  Polyhedron.c  Polyhedron.h  camera.c  camera.h  common.h  llist.h  main.c  scene.c  scene.h  stack.h  vector.h
module2/fractals/: gosper_curve.txt  mosaic.txt  peak.txt  sierpinski_carpet.txt  tree2.txt  tree3.txt
module3/lab11/: lab11.c  module3.h
shaders/: flat_color.fs  gradient.vs  gradient3D.fs  gradient3D.vs  light_source.vs  lit_instanced.fs  lit_instanced.vs  mix_textured_cube.fs  mix_textured_cube.vs  obj_instanced.fs  obj_instanced.vs  obj_textured.fs  obj_textured.vs  solar_system.fs  solar_system.vs  terrain.fs  terrain.vs  textured_cube.fs  textured_cube.vs  uniform_flat_color.fs  uniform_flat_color.vs
task2/: build.sh  clay_renderer_raylib.c  main.c
